assign1/tests/parsing/bad/double-paren.c
#include "FenneC.h"

int main(() {
}